css/app.css
ul, li, menu, a {
    text-decoration: none;
    list-style: none;
    color: currentColor;
}

.page-header {
    background-color: #2c3e50;
}

.hamburger-menu > i {
    font-size: 28px;
}

.hero-avatar > .hero-avatar-img {
    width: 30%;
}

main .hero,
main .section-about {
    background-color: #19bc9c;
}

.white-star::after {
    content: '';
    height: 3px;
    display: block;
    background-color: white;
    width: 100px;
}

.white-star::before {
    content: '';
    height: 3px;
    display: block;
    background-color: white;
    width: 100px;
}

.black-star::after {
    content: '';
    height: 3px;
    display: block;
    background-color: black;
    width: 100px;
}

.black-star::before {
    content: '';
    height: 3px;
    display: block;
    background-color: black;
    width: 100px;
}

.portfolio-card > img {
    width: 100%;
}

.page-form .user-information,
.page-form .textarea-message {
    width: 100%;
}

.form-button {
    background-color: #19bc9c;
}

.page-footer {
    background-color: #3b546d;
}

.footer-copyright {
    background-color: #2c3e50;
}

.footer-card > i {
    border: 1px solid white;
    line-height: 40px;
    width: 40px;
    aspect-ratio: 1;
    border-radius: 50%;
    font-size: 14px;
    display: inline-block;
}

.footer-copyright .copyright-icon,
.footer-copyright .footer-copyright-text 
 {
    font-size: 12px;
}

.footer-card-text .start-bootstrap-link {
    color: #19bc9c;
}


/* debug */

.debug [class^=col] {
    border: 1px solid black;
}

.debug [class^=container] {
    border: 1px solid red;
}

